[gd_scene load_steps=3 format=3 uid="uid://cgliu6uft2e5i"]

[ext_resource type="FontFile" uid="uid://box4a5q2he2o8" path="res://assets/Chango-Regular.ttf" id="1_eq08n"]
[ext_resource type="Script" uid="uid://bs4bsq76e6sp5" path="res://scripts/strike_text.gd" id="2_4b5e4"]

[node name="StrikeLabel" type="RichTextLabel"]
visible = false
offset_left = 280.0
offset_top = 492.0
offset_right = 722.0
offset_bottom = 646.0
theme_override_fonts/normal_font = ExtResource("1_eq08n")
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_4b5e4")

[node name="LabelShowTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="timeout" from="LabelShowTimer" to="." method="_on_label_show_timer_timeout"]
